<resources>
    <string name="app_name">Metro Sul Tejo</string>
    <string-array name="developerEmails">
        <item>mts.appsuporte@gmail.com</item>
    </string-array>
    <string name="info">Caso tenha alguma dúvida ou sugestão sobre o comportamento da aplicação, clique <u>aqui</u> para contactar o programador</string>
    <string name="intro_1">Seja bem vindo à aplicação não oficial do Metro Transportes do Sul. Desde já relembramos que os horários devem servir apenas como referência, podendo ser alterados pelos operadores sem aviso prévio.</string>
    <string name="intro_2">Na secção Próximo poderá ficar a par de quando irá passar o próximo metro em cada estação. Ficará ainda a saber quando passou o último metro.</string>
    <string name="intro_3">Na secção Horários terá à disposição uma tabela com o horário completo para cada linha. Poderá ainda filtrar a tabela pelo dia da semana que desejar.</string>
    <string name="intro_4">Consulte o diagrama da rede na secção Mapa e fique a saber a localização no mapa de todas as estações.</string>
    <string name="intro_5">Para mais informações consulte a secção com o mesmo nome ou visite o site oficial www.mts.pt.</string>
    <string name="estado_das_linhas">Estado das linhas</string>
    <string name="linha1">Linha 1 (Cacilhas &lt;-&gt; Corroios)</string>
    <string name="linha2">Linha 2 (Corroios &lt;-&gt; Pragal)</string>
    <string name="linha3">Linha 3 (Cacilhas &lt;-&gt; Universidade)</string>
    <string name="atualizado">Atualizado em 00:00</string>
    <string name="proximo">Próximo</string>
    <string name="horario">Horários</string>
    <string name="informacao">Informação</string>
    <string name="linhas_prompt">Selecione uma linha</string>
    <string name="estacao_prompt">Selecione uma estação</string>
    <string name="ultimo">Último</string>
    <string name="sem_dados">Sem dados</string>
    <string name="ultima">Última Partida:</string>
    <string name="proxima">Próxima Partida:</string>
    <string name="mais_tarde">Mais tarde:</string>
    <string name="volte_amanha">Volte Amanhã</string>
    <string name="title_activity_paragens">Map</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="linhas">Linhas</string>
    <string-array name="feriados">
        <item>01-01</item>
        <item>10-04</item>
        <item>25-04</item>
        <item>01-05</item>
        <item>10-06</item>
        <item>11-06</item>
        <item>15-08</item>
        <item>05-10</item>
        <item>01-11</item>
        <item>01-12</item>
        <item>08-12</item>
        <item>25-12</item>
    </string-array>
    <string-array name="linha_11">
        <item>Corroios</item>
        <item>Casa do Povo</item>
        <item>Santo Amaro</item>
        <item>Laranjeiro</item>
        <item>António Gedeão</item>
        <item>Parque da Paz</item>
        <item>Cova da Piedade</item>
        <item>Bento Gonçalves</item>
        <item>Almada</item>
        <item>São João Batista</item>
        <item>Gil Vicente</item>
        <item>25 de Abril</item>
        <item>Cacilhas</item>
    </string-array>
    <string-array name="linha_12">
        <item>Cacilhas</item>
        <item>25 de Abril</item>
        <item>Gil Vicente</item>
        <item>São João Batista</item>
        <item>Almada</item>
        <item>Bento Gonçalves</item>
        <item>Cova da Piedade</item>
        <item>Parque da Paz</item>
        <item>António Gedeão</item>
        <item>Laranjeiro</item>
        <item>Santo Amaro</item>
        <item>Casa do Povo</item>
        <item>Corroios</item>
    </string-array>
    <string-array name="linha_21">
        <item>Corroios</item>
        <item>Casa do Povo</item>
        <item>Santo Amaro</item>
        <item>Laranjeiro</item>
        <item>António Gedeão</item>
        <item>Parque da Paz</item>
        <item>Cova da Piedade</item>
        <item>Ramalha</item>
        <item>Pragal</item>
    </string-array>
    <string-array name="linha_22">
        <item>Pragal</item>
        <item>Ramalha</item>
        <item>Cova da Piedade</item>
        <item>Parque da Paz</item>
        <item>António Gedeão</item>
        <item>Laranjeiro</item>
        <item>Santo Amaro</item>
        <item>Casa do Povo</item>
        <item>Corroios</item>
    </string-array>
    <string-array name="linha_31">
        <item>Cacilhas</item>
        <item>25 de Abril</item>
        <item>Gil Vicente</item>
        <item>São João Batista</item>
        <item>Almada</item>
        <item>Bento Gonçalves</item>
        <item>Ramalha</item>
        <item>Pragal</item>
        <item>Boa Esperança</item>
        <item>Fomega</item>
        <item>Monte da Caparica</item>
        <item>Universidade</item>
    </string-array>
    <string-array name="linha_32">
        <item>Universidade</item>
        <item>Monte da Caparica</item>
        <item>Fomega</item>
        <item>Boa Esperança</item>
        <item>Pragal</item>
        <item>Ramalha</item>
        <item>Bento Gonçalves</item>
        <item>Almada</item>
        <item>São João Batista</item>
        <item>Gil Vicente</item>
        <item>25 de Abril</item>
        <item>Cacilhas</item>
    </string-array>
    <string-array name="linha_11_alt">
        <item>Corroios</item>
        <item>CasadoPovo</item>
        <item>SantoAmaro</item>
        <item>Laranjeiro</item>
        <item>AntónioGedeão</item>
        <item>ParquedaPaz</item>
        <item>CovadaPiedade</item>
        <item>BentoGonçalves</item>
        <item>Almada</item>
        <item>SãoJoãoBaptista</item>
        <item>GilVicente</item>
        <item>Abril</item>
        <item>Cacilhas</item>
    </string-array>
    <string-array name="linha_12_alt">
        <item>Cacilhas</item>
        <item>Abril</item>
        <item>GilVicente</item>
        <item>SãoJoãoBaptista</item>
        <item>Almada</item>
        <item>BentoGonçalves</item>
        <item>CovadaPiedade</item>
        <item>ParquedaPaz</item>
        <item>AntónioGedeão</item>
        <item>Laranjeiro</item>
        <item>SantoAmaro</item>
        <item>CasadoPovo</item>
        <item>Corroios</item>
    </string-array>
    <string-array name="linha_21_alt">
        <item>Corroios</item>
        <item>CasadoPovo</item>
        <item>SantoAmaro</item>
        <item>Laranjeiro</item>
        <item>AntónioGedeão</item>
        <item>ParquedaPaz</item>
        <item>CovadaPiedade</item>
        <item>Ramalha</item>
        <item>Pragal</item>
    </string-array>
    <string-array name="linha_22_alt">
        <item>Pragal</item>
        <item>Ramalha</item>
        <item>CovadaPiedade</item>
        <item>ParquedaPaz</item>
        <item>AntónioGedeão</item>
        <item>Laranjeiro</item>
        <item>SantoAmaro</item>
        <item>CasadoPovo</item>
        <item>Corroios</item>
    </string-array>
    <string-array name="linha_31_alt">
        <item>Cacilhas</item>
        <item>Abril</item>
        <item>GilVicente</item>
        <item>SãoJoãoBaptista</item>
        <item>Almada</item>
        <item>BentoGonçalves</item>
        <item>Ramalha</item>
        <item>Pragal</item>
        <item>BoaEsperança</item>
        <item>Fomega</item>
        <item>MonteCaparica</item>
        <item>Universidade</item>
    </string-array>
    <string-array name="linha_32_alt">
        <item>Universidade</item>
        <item>MonteCaparica</item>
        <item>Fomega</item>
        <item>BoaEsperança</item>
        <item>Pragal</item>
        <item>Ramalha</item>
        <item>BentoGonçalves</item>
        <item>Almada</item>
        <item>SãoJoãoBaptista</item>
        <item>GilVicente</item>
        <item>Abril</item>
        <item>Cacilhas</item>
    </string-array>
    <string name="title_activity_line">LineActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="line_11_name">LINHA 1 - Corroios/Cacilhas</string>
    <string-array name="line_11_stations">
        <item>Corroios</item>
        <item>Casa do Povo</item>
        <item>Santo Amaro</item>
        <item>Laranjeiro</item>
        <item>António Gedeão</item>
        <item>Parque da Paz</item>
        <item>Cova da Piedade</item>
        <item>Bento Gonçalves</item>
        <item>Almada</item>
        <item>São João Batista</item>
        <item>Gil Vicente</item>
        <item>25 de Abril</item>
        <item>Cacilhas</item>
    </string-array>
    <string name="line_12_name">LINHA 1 - Cacilhas/Corroios</string>
    <string-array name="line_12_stations">
        <item>Cacilhas</item>
        <item>25 de Abril</item>
        <item>Gil Vicente</item>
        <item>São João Batista</item>
        <item>Almada</item>
        <item>Bento Gonçalves</item>
        <item>Cova da Piedade</item>
        <item>Parque da Paz</item>
        <item>António Gedeão</item>
        <item>Laranjeiro</item>
        <item>Santo Amaro</item>
        <item>Casa do Povo</item>
        <item>Corroios</item>
    </string-array>
    <string name="line_21_name">LINHA 2 - Corroios/Pragal</string>
    <string-array name="line_21_stations">
        <item>Corroios</item>
        <item>Casa do Povo</item>
        <item>Santo Amaro</item>
        <item>Laranjeiro</item>
        <item>António Gedeão</item>
        <item>Parque da Paz</item>
        <item>Cova da Piedade</item>
        <item>Ramalha</item>
        <item>Pragal</item>
    </string-array>
    <string name="line_22_name">LINHA 2 - Pragal/Corroios</string>
    <string-array name="line_22_stations">
        <item>Pragal</item>
        <item>Ramalha</item>
        <item>Cova da Piedade</item>
        <item>Parque da Paz</item>
        <item>António Gedeão</item>
        <item>Laranjeiro</item>
        <item>Santo Amaro</item>
        <item>Casa do Povo</item>
        <item>Corroios</item>
    </string-array>
    <string name="line_31_name">LINHA 3 - Cacilhas/Universidade</string>
    <string-array name="line_31_stations">
        <item>Cacilhas</item>
        <item>25 de Abril</item>
        <item>Gil Vicente</item>
        <item>São João Batista</item>
        <item>Almada</item>
        <item>Bento Gonçalves</item>
        <item>Ramalha</item>
        <item>Pragal</item>
        <item>Boa Esperança</item>
        <item>Fomega</item>
        <item>Monte da Caparica</item>
        <item>Universidade</item>
    </string-array>
    <string name="line_32_name">LINHA 3 - Universidade/Cacilhas</string>
    <string-array name="line_32_stations">
        <item>Universidade</item>
        <item>Monte da Caparica</item>
        <item>Fomega</item>
        <item>Boa Esperança</item>
        <item>Pragal</item>
        <item>Ramalha</item>
        <item>Bento Gonçalves</item>
        <item>Almada</item>
        <item>São João Batista</item>
        <item>Gil Vicente</item>
        <item>25 de Abril</item>
        <item>Cacilhas</item>
    </string-array>
    <string name="line11_name">Cacilhas ⟷ Corroios</string>
    <string name="line12_name">Corroios ⟷ Cacilhas</string>
    <string name="line21_name">Corroios ⟷ Pragal</string>
    <string name="line22_name">Pragal ⟷ Corroios</string>
    <string name="line31_name">Cacilhas ⟷ Universidade</string>
    <string name="line32_name">Universidade ⟷ Cacilhas</string>
    <string name="mapa">Mapa</string>
</resources>